--- a/index.html
+++ b/index.html
@@ -7,16 +7,16 @@
 		<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		
-		<link rel="modulepreload" href="./_app/immutable/entry/start.BffOzDlz.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/Dn8oBpix.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/start.CnYE4TIq.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/yaCulDLs.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/BsMblobF.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/nc6igJ8u.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/CJWsG-nt.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/CAqMUAlP.js">
-		<link rel="modulepreload" href="./_app/immutable/entry/app.D_pKFUcw.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/app.kNWrwqaA.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/D9jgzf4i.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/1uQaqlrS.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/LC8R-qXw.js">
-		<link rel="modulepreload" href="./_app/immutable/nodes/0.C_GWAU0y.js">
+		<link rel="modulepreload" href="./_app/immutable/nodes/0.DErRb44R.js">
 		<link rel="modulepreload" href="./_app/immutable/nodes/2.CmSdjbIz.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/DzlK2KBf.js">
 	</head>
@@ -25,7 +25,7 @@
 			
 			<script>
 				{
-					__sveltekit_76h2ez = {
+					__sveltekit_ulhvdo = {
 						base: new URL(".", location).pathname.slice(0, -1),
 						assets: "/emanual"
 					};
@@ -33,8 +33,8 @@
 					const element = document.currentScript.parentElement;
 
 					Promise.all([
-						import("./_app/immutable/entry/start.BffOzDlz.js"),
-						import("./_app/immutable/entry/app.D_pKFUcw.js")
+						import("./_app/immutable/entry/start.CnYE4TIq.js"),
+						import("./_app/immutable/entry/app.kNWrwqaA.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element, {
 							node_ids: [0, 2],
