--- a/index.html
+++ b/index.html
@@ -7,25 +7,25 @@
 		<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		
-		<link rel="modulepreload" href="./_app/immutable/entry/start.CnYE4TIq.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/yaCulDLs.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/BsMblobF.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/CJWsG-nt.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/CAqMUAlP.js">
-		<link rel="modulepreload" href="./_app/immutable/entry/app.kNWrwqaA.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/D9jgzf4i.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/1uQaqlrS.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/LC8R-qXw.js">
-		<link rel="modulepreload" href="./_app/immutable/nodes/0.DErRb44R.js">
-		<link rel="modulepreload" href="./_app/immutable/nodes/2.CmSdjbIz.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/DzlK2KBf.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/start.DXHWd8pX.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/C215tYgd.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/DdoM72-U.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/DmzoMVoy.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/Dxbov-KT.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/app.Mdpf-6o6.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/DngSkIs5.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/CD3BEobl.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/DvKO2T4R.js">
+		<link rel="modulepreload" href="./_app/immutable/nodes/0.Ux5o-C_c.js">
+		<link rel="modulepreload" href="./_app/immutable/nodes/2.C9-D-Q5u.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/5LJFe2vh.js">
 	</head>
 	<body data-sveltekit-preload-data="hover" style="overflow-y: hidden;">
-		<div style="display: contents"><!--[--><!--[--><!----><div class="container"><header class="d-flex flex-wrap justify-content-center py-3 mb-4 border-bottom"><a href="./" class="d-flex align-items-center mb-3 mb-md-0 me-md-auto text-dark text-decoration-none"><svg class="bi me-2" width="40" height="32"><use xlink:href="#bootstrap"></use></svg> <span class="fs-4">e-Lab manual</span></a> <ul class="nav nav-pills"><li class="nav-item"><a href="./" class="nav-link active" aria-current="page">Home</a></li></ul></header></div> <div class="d-flex flex-row"><div class="mt-2 d-flex flex-column align-items-stretch flex-shrink-0 bg-white" style="width: 500px; border-right: 1px solid #eaeaea;"><div class="input-group" style="width: 97%;"><img class="input-group-text" src="/search.svg" id="basic-addon1" style="width: 10%;" alt="search"> <input value="" id="search_sideBar" type="text" class="form-control" placeholder="Type in tests / forms to search" tabindex="0"></div> <div class="list-group list-group-flush border-bottom" style="height: calc(100vh - 143px); overflow-y: scroll"><!--[--><!--]--></div></div>  <!----><h1>this is the default page</h1><!----><!----></div><!----><!--]--> <!--[!--><!--]--><!--]-->
+		<div style="display: contents"><!--[--><!--[--><!----><div class="container"><header class="d-flex flex-wrap justify-content-center py-3 mb-4 border-bottom"><a href="./" class="d-flex align-items-center mb-3 mb-md-0 me-md-auto text-dark text-decoration-none"><svg class="bi me-2" width="40" height="32"><use xlink:href="#bootstrap"></use></svg> <span class="fs-4">e-Lab manual</span></a> <ul class="nav nav-pills"><li class="nav-item"><a href="./" class="nav-link active" aria-current="page">Home</a></li></ul></header></div> <div class="d-flex flex-row"><div class="mt-2 d-flex flex-column align-items-stretch flex-shrink-0 bg-white" style="width: 500px; border-right: 1px solid #eaeaea;"><div class="input-group" style="width: 97%;"><img class="input-group-text" src="./search.svg" id="basic-addon1" style="width: 10%;" alt="search"> <input value="" id="search_sideBar" type="text" class="form-control" placeholder="Type in tests / forms to search" tabindex="0"></div> <div class="list-group list-group-flush border-bottom" style="height: calc(100vh - 143px); overflow-y: scroll"><!--[--><!--]--></div></div> <!----><h1>this is the default page</h1><!----><!----></div><!----><!--]--> <!--[!--><!--]--><!--]-->
 			
 			<script>
 				{
-					__sveltekit_ulhvdo = {
+					__sveltekit_q1t0j4 = {
 						base: new URL(".", location).pathname.slice(0, -1),
 						assets: "/emanual"
 					};
@@ -33,8 +33,8 @@
 					const element = document.currentScript.parentElement;
 
 					Promise.all([
-						import("./_app/immutable/entry/start.CnYE4TIq.js"),
-						import("./_app/immutable/entry/app.kNWrwqaA.js")
+						import("./_app/immutable/entry/start.DXHWd8pX.js"),
+						import("./_app/immutable/entry/app.Mdpf-6o6.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element, {
 							node_ids: [0, 2],
