--- a/index.html
+++ b/index.html
@@ -7,16 +7,16 @@
 		<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		
-		<link rel="modulepreload" href="./_app/immutable/entry/start.DXHWd8pX.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/C215tYgd.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/start.5Kl90kDT.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/BFdLrJQn.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/DdoM72-U.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/DmzoMVoy.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/1A7G9k9W.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/Dxbov-KT.js">
-		<link rel="modulepreload" href="./_app/immutable/entry/app.Mdpf-6o6.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/app.Bl3U5O_Z.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/DngSkIs5.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/CD3BEobl.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/DvKO2T4R.js">
-		<link rel="modulepreload" href="./_app/immutable/nodes/0.Ux5o-C_c.js">
+		<link rel="modulepreload" href="./_app/immutable/nodes/0.CcqrBgHr.js">
 		<link rel="modulepreload" href="./_app/immutable/nodes/2.C9-D-Q5u.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/5LJFe2vh.js">
 	</head>
@@ -25,7 +25,7 @@
 			
 			<script>
 				{
-					__sveltekit_q1t0j4 = {
+					__sveltekit_12f0jbx = {
 						base: new URL(".", location).pathname.slice(0, -1),
 						assets: "/emanual"
 					};
@@ -33,8 +33,8 @@
 					const element = document.currentScript.parentElement;
 
 					Promise.all([
-						import("./_app/immutable/entry/start.DXHWd8pX.js"),
-						import("./_app/immutable/entry/app.Mdpf-6o6.js")
+						import("./_app/immutable/entry/start.5Kl90kDT.js"),
+						import("./_app/immutable/entry/app.Bl3U5O_Z.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element, {
 							node_ids: [0, 2],
