--- a/test/7.html
+++ b/test/7.html
@@ -7,16 +7,16 @@
 		<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		
-		<link rel="modulepreload" href="../_app/immutable/entry/start.ol63fDSH.js">
-		<link rel="modulepreload" href="../_app/immutable/chunks/D439aXwR.js">
+		<link rel="modulepreload" href="../_app/immutable/entry/start.Dxc_uIY2.js">
+		<link rel="modulepreload" href="../_app/immutable/chunks/CLEFwN-g.js">
 		<link rel="modulepreload" href="../_app/immutable/chunks/DdoM72-U.js">
-		<link rel="modulepreload" href="../_app/immutable/chunks/BDH9NUc5.js">
+		<link rel="modulepreload" href="../_app/immutable/chunks/BWBgPXHl.js">
 		<link rel="modulepreload" href="../_app/immutable/chunks/Dxbov-KT.js">
-		<link rel="modulepreload" href="../_app/immutable/entry/app.8eo2ajMc.js">
+		<link rel="modulepreload" href="../_app/immutable/entry/app.DNaZ00pL.js">
 		<link rel="modulepreload" href="../_app/immutable/chunks/DngSkIs5.js">
 		<link rel="modulepreload" href="../_app/immutable/chunks/CD3BEobl.js">
 		<link rel="modulepreload" href="../_app/immutable/chunks/DvKO2T4R.js">
-		<link rel="modulepreload" href="../_app/immutable/nodes/0.uWCSkKE1.js">
+		<link rel="modulepreload" href="../_app/immutable/nodes/0.DWv3Ztuv.js">
 		<link rel="modulepreload" href="../_app/immutable/nodes/3.DdTGFoVR.js">
 	</head>
 	<body data-sveltekit-preload-data="hover" style="overflow-y: hidden;">
@@ -24,7 +24,7 @@
 			
 			<script>
 				{
-					__sveltekit_h81ed2 = {
+					__sveltekit_18sv1oc = {
 						base: new URL("..", location).pathname.slice(0, -1),
 						assets: "/emanual"
 					};
@@ -32,8 +32,8 @@
 					const element = document.currentScript.parentElement;
 
 					Promise.all([
-						import("../_app/immutable/entry/start.ol63fDSH.js"),
-						import("../_app/immutable/entry/app.8eo2ajMc.js")
+						import("../_app/immutable/entry/start.Dxc_uIY2.js"),
+						import("../_app/immutable/entry/app.DNaZ00pL.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element, {
 							node_ids: [0, 3],
